HEAD
	+ Show complex types (more than one field) in audit log
	  while editing by storing the dump of the value
3.0.32
	+ Display remote services messages if they exist on Dashboard
	+ Fixed mdstat output processing to remove "(auto-read-only)"
3.0.31
	+ Fixed audit logging of delete actions
3.0.30
	+ Pass HTTP_PROXY system environment variable to CGIs as they are
	  used in Zentyal modules
3.0.29
	+ Make sure that we always discard audit of changes when we revoke them
	+ Include contents of /etc/resolv.conf in bug report
	+ Avoid Apache error screen in login when entering through Zentyal
	  Remote using password
3.0.28
	+ Upgrade to 3.2 notification in dashboard
3.0.27
	+ Fixed in-place boolean edit with non-basic types different to Union
	+ Fixed side-effect in Model::Manager::_modelHasMultipleInstances() that
	  tried to load composite as model by mistake, the bug was at least
	  present sometimes when trying to generate the configuration report
3.0.26
	+ Fixed regression on logs search caused by autoFilter changes
3.0.25
	+ Remove unnecessary and problematic desktop services code
	+ No-committed changes does not appear in configuration changes
	  log table
	+ Added autoFilter property to method tableInfo
3.0.24
	+ EBox::Util::Random mentions /dev/urandom in its error messages
	  to ease troubleshooting
	+ Don't allow invalid email in create report CGI
	+ Assure that type's references to its row are not lost in the
	  edit form template methods
3.0.23
	+ Fixed bad arguments in EBox::CGI::Controller::Composite call to SUPER::new
	+ Fixed encoding of parameters in confirmation dialogs
	+ Check backup integrity by listing the tar file, throw
	  InvalidData exception if the tar is corrupted
3.0.22
	+ Do not use hidden form fields for generating confirmation dialog JS
	+ Fixed log bugs: use correct RO mode in loggerd, fixed behaviour
	  when all log helpers are disabled, enable logs correctly when
	  added by first time to configure logs table